Add submission service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,15 +20,15 @@ services:
     hostname: dsw_client
     environment:
     # (!) Change API_URL
-    #   API_URL: <dsw-url>
-        API_URL: http://localhost:3000
+    # API_URL: <dsw-url>
+      API_URL: http://localhost:3000
     volumes:
-     - ./dsw-client/variables.scss:/src/scss/customizations/_variables.scss:ro
-     - ./dsw-client/assets:/usr/share/nginx/html/assets:ro
-     - ./dsw-client/configuration/provisioning.json:/configuration/provisioning.json:ro
-     - ./dsw-client/favicon.ico:/usr/share/nginx/html/favicon.ico:ro
+      - ./dsw-client/variables.scss:/src/scss/customizations/_variables.scss:ro
+      - ./dsw-client/assets:/usr/share/nginx/html/assets:ro
+      - ./dsw-client/configuration/provisioning.json:/configuration/provisioning.json:ro
+      - ./dsw-client/favicon.ico:/usr/share/nginx/html/favicon.ico:ro
     ports:
-     - 8080:80
+      - 8080:80
 
   docworker:
     image: datastewardshipwizard/document-worker:2.5.0
@@ -46,8 +46,8 @@ services:
     environment:
       MONGO_INITDB_DATABASE: wizard
     volumes:
-     - ./mongo/data:/data/db
-     - ./mongo/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+      - ./mongo/data:/data/db
+      - ./mongo/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
 
   rabbitmq:
     image: rabbitmq:3.8.2-management
@@ -75,12 +75,21 @@ services:
       - 8081:80
 
   blazegraph:
-      image: metaphacts/blazegraph-basic:2.2.0-20160908.003514-6
-      volumes:
-          - ./blazegraph:/blazegraph-data
+    image: metaphacts/blazegraph-basic:2.2.0-20160908.003514-6
+    ports:
+      - 8085:8080
+    volumes:
+      - ./blazegraph:/blazegraph-data
 
   json_server:
     image: clue/json-server
     hostname: json_server
     volumes:
-      - "./json-server/db.json:/data/db.json:ro"
+      - ./json-server/db.json:/data/db.json:ro
+
+  submission_service:
+    image: datastewardshipwizard/triple-store-submission-service:1.0.0
+    restart: always
+    hostname: submission_service
+    volumes:
+      - ./submission-service/config.yml:/app/config.yml:ro
